<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gastos App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="shop_settin">Shop Setting</string>
    <string name="payment_set">Payment Settting</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_addres">Shop Address</string>
    <string name="shop_catego">Shop Category</string>
    <string name="shop_locati">Shop Location pin</string>
    <string name="shop_locate_city">Shop Location</string>
    <string name="shop_inform">Shop Information</string>
    <string name="account_inf">Account Information</string>
    <string name="owner_name">Owner Name</string>
    <string name="phone_numbe">Phone Number</string>
    <string name="email_addre">Email Address</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="category_spinner_prompt">Select Shop Category</string>
    <string name="city_spinner_prompt">Select Shop Location</string>


    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>


</resources>