<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A588157"
    tools:context=".SetNewPin_Activity">

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="52dp"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:text="Set New Pin"
        android:textColor="#004445"
        android:textSize="25dp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set"
        android:layout_marginTop="73dp">

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="310dp"
            android:layout_height="120dp"
            android:layout_below="@+id/pho_number"
            android:layout_alignParentLeft="true"
            android:background="@drawable/group_582"
            />
        <EditText
            android:id="@+id/newpin1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="phone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/enter_mobile"
            android:layout_marginTop="22dp"
            android:hint="New Pin"
            android:textColorHint="#818181"
            android:textSize="14dp"
            android:textColor="#004445"
            android:background="@null"
            />
        <EditText
            android:id="@+id/newpin2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="phone"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/enter_mobile"
            android:layout_marginTop="75dp"
            android:hint="Re-Enter Pin"
            android:textColorHint="#818181"
            android:textSize="14dp"
            android:textColor="#004445"
            android:background="@null"
            />

        <ImageView
            android:id="@+id/goo"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="280dp"
            android:layout_below="@+id/pho_number"
            android:layout_marginTop="35dp"
            android:background="@drawable/group579"
            />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentBottom="true"
        android:backgroundTint="#004445"
        app:cardCornerRadius="20dp"
        android:elevation="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow style="@style/keyboard_row"
                android:id="@+id/t1"
                android:layout_marginTop="25dp"
                tools:ignore="DuplicateIds">

                <TextView
                    android:id="@+id/t9_key_1"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_one"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_2"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_two"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_3"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_three"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:id="@+id/t2"
                android:layout_below="@+id/t1"
                android:layout_marginTop="14dp"
                tools:ignore="DuplicateIds">

                <TextView
                    android:id="@+id/t9_key_4"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_four"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_5"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_five"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_6"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_six"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:id="@+id/t3"
                android:layout_below="@+id/t2"
                android:layout_marginTop="14dp">

                <TextView
                    android:id="@+id/t9_key_7"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_seven"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_8"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_eight"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_9"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_nine"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow style="@style/keyboard_row"
                android:id="@+id/t4"
                android:layout_below="@+id/t3"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/t9_key_clear"
                    style="@style/keyboard_button"

                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <TextView
                    android:id="@+id/t9_key_0"
                    style="@style/keyboard_number_button"
                    android:text="@string/number_zero"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/t9_key_backspace"
                    style="@style/keyboard_button"
                    android:text="@string/btn_backspace"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </TableRow>


        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>