<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idTVHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:padding="4dp"
            android:text="@string/settings"
            android:textAppearance="@style/settings" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/idCVAccount"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_profile_icon" />

                <TextView
                    android:id="@+id/idTVAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/idIVaction"
                    android:layout_toRightOf="@id/idIVProfile"
                    android:padding="4dp"
                    android:text="@string/account"
                    android:textAppearance="@style/account" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVAccount"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVProfile"
                    android:padding="3dp"
                    android:text="Account Holder Name"
                    android:textAppearance="@style/maheep_sing" />


                <ImageView
                    android:id="@+id/idIVaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_circle_arrow" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            android:id="@+id/idCVShop"
            app:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVShopIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_cart" />

                <TextView
                    android:id="@+id/idTVShopping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/idIVShopAction"
                    android:layout_toRightOf="@id/idIVShopIcon"
                    android:padding="4dp"
                    android:text="@string/shop_settin"
                    android:textAppearance="@style/account" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVShopping"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVShopIcon"
                    android:padding="3dp"
                    android:text="Address Information"
                    android:textAppearance="@style/maheep_sing" />


                <ImageView
                    android:id="@+id/idIVShopAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_circle_arrow" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/idCVPayment"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVPaymentIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_card_icon" />

                <TextView
                    android:id="@+id/idTVPayment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toLeftOf="@id/idIVBankAction"
                    android:layout_toRightOf="@id/idIVPaymentIcon"
                    android:padding="4dp"
                    android:text="@string/payment_set"
                    android:textAppearance="@style/account" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVPayment"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVPaymentIcon"
                    android:padding="3dp"
                    android:text="Bank Information"
                    android:textAppearance="@style/maheep_sing" />


                <ImageView
                    android:id="@+id/idIVBankAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="20dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_circle_arrow" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/idRLSupport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVSupportIcons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_question_icon" />

                <TextView
                    android:id="@+id/idTVSupport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/idIVSupportIcons"
                    android:padding="4dp"
                    android:text="@string/support"
                    android:textAppearance="@style/account" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVSupport"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVSupportIcons"
                    android:padding="3dp"
                    android:text="Send Feedback and Rate Us"
                    android:textAppearance="@style/maheep_sing" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/idRLAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_info_icon" />

                <TextView
                    android:id="@+id/idTVAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/idIVAbout"
                    android:padding="4dp"
                    android:text="@string/about_us"
                    android:textAppearance="@style/account"/>


                <TextView
                    android:id="@+id/idTVContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVAbout"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVAbout"
                    android:padding="3dp"
                    android:text="Contact Us"
                    android:textAppearance="@style/maheep_sing" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/idTVContact"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/idIVAbout"
                    android:padding="3dp"
                    android:text="Legal"
                    android:textAppearance="@style/maheep_sing" />


            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/idRLLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/idIVLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_log_out" />

                <TextView
                    android:id="@+id/idTVLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/idIVLogout"
                    android:padding="4dp"
                    android:text="@string/log_out"
                    android:textAppearance="@style/account" />


            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>